include date option for exporting data and update tutorial

--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -449,10 +449,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "b02b5fef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewDataInterface.py:38: UserWarning: Loading existing data pkl file\n",
+      "  warnings.warn(f\"Loading existing data pkl file\")\n"
+     ]
+    }
+   ],
    "source": [
     "if not os.path.exists('data'):\n",
     "    os.mkdir('data')\n",
@@ -481,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "32ab23ca-c27d-4c0d-9149-08c24b244d26",
    "metadata": {},
    "outputs": [
@@ -491,7 +500,7 @@
        "dict_keys(['index', 'description', 'annot_col_config_dict', 'annot_df', 'history_df', 'df'])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "161965c4",
    "metadata": {},
    "outputs": [
@@ -628,7 +637,7 @@
        "sample_4   Testing preprocessing  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "cdc0779a",
    "metadata": {},
    "outputs": [],
@@ -672,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "2875d634",
    "metadata": {},
    "outputs": [],
@@ -683,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "6f611126-58d6-48b7-a056-01737bc2b263",
    "metadata": {},
    "outputs": [
@@ -715,23 +724,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sample_0</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>Nothing to say</td>\n",
+       "      <td>Remove</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_1</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>Fishy</td>\n",
+       "      <td>Remove</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_2</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>Looks good</td>\n",
+       "      <td>Keep</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_3</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>Bad</td>\n",
+       "      <td>Remove</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_4</th>\n",
@@ -743,15 +752,15 @@
        "</div>"
       ],
       "text/plain": [
-       "         Notes Flag\n",
-       "sample_0           \n",
-       "sample_1           \n",
-       "sample_2           \n",
-       "sample_3           \n",
-       "sample_4           "
+       "                   Notes    Flag\n",
+       "sample_0  Nothing to say  Remove\n",
+       "sample_1           Fishy  Remove\n",
+       "sample_2      Looks good    Keep\n",
+       "sample_3             Bad  Remove\n",
+       "sample_4                        "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "b00fd0cf",
    "metadata": {},
    "outputs": [
@@ -782,12 +791,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dash app running on http://0.0.0.0:8050/\n"
+      "Dash app running on http://0.0.0.0:8051/\n"
      ]
     }
    ],
    "source": [
-    "my_reviewer.run(collapsable=True)"
+    "my_reviewer.run(collapsable=True, port=8051)"
    ]
   },
   {
@@ -813,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "8bff62a2",
    "metadata": {},
    "outputs": [
@@ -881,7 +890,7 @@
        "sample_4                        "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "852bf6fa-9016-493a-89e9-cfa29e37d9c1",
    "metadata": {},
    "outputs": [
@@ -976,7 +985,7 @@
        "0             Bad  Remove  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,18 +1003,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73cf1af9-7850-4c69-987a-34d8d968225d",
+   "metadata": {},
+   "source": [
+    "## Export your data\n",
+    "\n",
+    "This is highly recommended to run periodically. Exporting will write the `annot_df` and `history_df` dataframes to a tsv file in the directory specified. \n",
+    "\n",
+    "We include a boolean parameter to `export_by_day`, which will create a sub-directory inside the input directory labeled by the current date (YYYY-MM-DD) and save the current state of your review in that folder.\n",
+    "\n",
+    "We also include a boolean parameter `dry_run` so you can see where the data will be exported."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "725efe31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Making new directory data/example_reviewer_data/2023-03-02\n",
+      "Export directory will be data/example_reviewer_data/2023-03-02. Nothing exported yet.\n"
+     ]
+    }
+   ],
    "source": [
-    "from datetime import date\n",
-    "export_dir = f'data/example_reviewer_data.exported_{date.today()}'\n",
+    "export_dir = f'data/example_reviewer_data'\n",
     "if not os.path.exists(export_dir):\n",
     "    os.mkdir(export_dir)\n",
     "    \n",
-    "my_reviewer.review_data_interface.export_data(export_dir)"
+    "my_reviewer.export_data(export_dir, export_by_day=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e26441c4-57df-4d06-b8cb-915f97dc9c56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory data/example_reviewer_data/2023-03-02 already exists\n",
+      "Exported to data/example_reviewer_data/2023-03-02\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Actually saving the data\n",
+    "my_reviewer.export_data(export_dir, export_by_day=True, dry_run=False)"
    ]
   },
   {
@@ -1765,9 +1816,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "annotation_fixes_JupyterReviewer",
+   "display_name": "JupyterReviewerEnv",
    "language": "python",
-   "name": "annotation_fixes_jupyterreviewer"
+   "name": "jupyterreviewerenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1779,7 +1830,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
