--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "725efe31",
    "metadata": {},
    "outputs": [
@@ -1026,7 +1026,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Making new directory data/example_reviewer_data/2023-03-02\n",
+      "Directory data/example_reviewer_data/2023-03-02 already exists\n",
       "Export directory will be data/example_reviewer_data/2023-03-02. Nothing exported yet.\n"
      ]
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "e26441c4-57df-4d06-b8cb-915f97dc9c56",
    "metadata": {},
    "outputs": [
@@ -1050,6 +1050,9 @@
      "output_type": "stream",
      "text": [
       "Directory data/example_reviewer_data/2023-03-02 already exists\n",
+      "Saving annot_df to data/example_reviewer_data/2023-03-02/annot_df.tsv\n",
+      "Saving history_df to data/example_reviewer_data/2023-03-02/history_df.tsv\n",
+      "Saving df to data/example_reviewer_data/2023-03-02/df.tsv\n",
       "Exported to data/example_reviewer_data/2023-03-02\n"
      ]
     }
@@ -1083,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "id": "cec30f2c",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "id": "1cf5f2b7",
    "metadata": {},
    "outputs": [
@@ -1152,15 +1155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 30,
    "id": "bcaac9d1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading data from previous review with pickle file\n"
+      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewDataInterface.py:38: UserWarning:\n",
+      "\n",
+      "Loading existing data pkl file\n",
+      "\n"
      ]
     }
    ],
@@ -1178,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "id": "386d24d6-311c-4678-9832-503aadd8e058",
    "metadata": {},
    "outputs": [
@@ -1205,6 +1211,13 @@
        "      <th></th>\n",
        "      <th>Flag</th>\n",
        "      <th>Notes</th>\n",
+       "      <th>Histogram color</th>\n",
+       "      <th>A Number</th>\n",
+       "      <th>A radioitem</th>\n",
+       "      <th>A checklist</th>\n",
+       "      <th>A dropdown menu</th>\n",
+       "      <th>A multi-select dropdown menu</th>\n",
+       "      <th>Test removing annotation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1212,29 +1225,60 @@
        "      <th>sample_0</th>\n",
        "      <td>Remove</td>\n",
        "      <td>Nothing to say</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_1</th>\n",
        "      <td>Remove</td>\n",
        "      <td>Fishy</td>\n",
+       "      <td></td>\n",
+       "      <td>0.5</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_3</th>\n",
        "      <td>Remove</td>\n",
        "      <td>Bad</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Option a</td>\n",
+       "      <td>[Option 1]</td>\n",
+       "      <td></td>\n",
+       "      <td>[Option y]</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Flag           Notes\n",
-       "sample_0  Remove  Nothing to say\n",
-       "sample_1  Remove           Fishy\n",
-       "sample_3  Remove             Bad"
+       "            Flag           Notes Histogram color  A Number A radioitem  \\\n",
+       "sample_0  Remove  Nothing to say                       NaN               \n",
+       "sample_1  Remove           Fishy                       0.5               \n",
+       "sample_3  Remove             Bad                       NaN    Option a   \n",
+       "\n",
+       "         A checklist A dropdown menu A multi-select dropdown menu  \\\n",
+       "sample_0                                                            \n",
+       "sample_1                                                            \n",
+       "sample_3  [Option 1]                                   [Option y]   \n",
+       "\n",
+       "          Test removing annotation  \n",
+       "sample_0                       NaN  \n",
+       "sample_1                       NaN  \n",
+       "sample_3                       NaN  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "id": "1e23f569",
    "metadata": {},
    "outputs": [],
@@ -1282,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "id": "f44d22bb",
    "metadata": {},
    "outputs": [
@@ -1335,7 +1379,7 @@
        "1  Anthracycline  remission       225"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "id": "9fd80758",
    "metadata": {},
    "outputs": [],
@@ -1386,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "id": "b89c3fea-2afd-4075-a473-e8a85fcc7f5c",
    "metadata": {},
    "outputs": [],
@@ -1398,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "id": "6153a01e-65d4-4300-a06e-b005ef474990",
    "metadata": {},
    "outputs": [],
@@ -1408,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 37,
    "id": "9849c027-aa61-45e5-a70d-76abe4142cd9",
    "metadata": {},
    "outputs": [],
@@ -1456,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
    "id": "3f91079d-0084-4abf-a4b0-ecb292e65d7f",
    "metadata": {},
    "outputs": [],
@@ -1534,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 39,
    "id": "7d013fe3-fd80-49de-818f-29a2748722b7",
    "metadata": {},
    "outputs": [
@@ -1544,7 +1588,7 @@
        "True"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 40,
    "id": "f1e83bc2-f597-4e80-82f4-558265058096",
    "metadata": {},
    "outputs": [
@@ -1575,7 +1619,7 @@
        "False"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 41,
    "id": "67cb42cd",
    "metadata": {},
    "outputs": [],
@@ -1639,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "id": "7871969b",
    "metadata": {},
    "outputs": [
@@ -1647,12 +1691,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dash app running on http://0.0.0.0:8050/\n"
+      "Dash app running on http://0.0.0.0:8052/\n"
      ]
     }
    ],
    "source": [
-    "my_reviewer_2.run()"
+    "my_reviewer_2.run(port=8052)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6efa4f6-434c-4e72-af90-58b9b63afa70",
+   "metadata": {},
+   "source": [
+    "### Navigate data to review inside the dashboard"
    ]
   },
   {
@@ -1665,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 45,
    "id": "b7630df3-40b5-4e8a-9638-cdf4cd59022b",
    "metadata": {},
    "outputs": [
@@ -1673,12 +1725,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dash app running on http://0.0.0.0:8050/\n"
+      "Dash app running on http://0.0.0.0:8052/\n"
      ]
     }
    ],
    "source": [
-    "my_reviewer_2.run(review_data_table_df=df.loc[keep_samples_index, ['gender', 'age', 'tissue_origin']], review_data_table_page_size=7)"
+    "my_reviewer_2.run(\n",
+    "    review_data_table_df=df.loc[keep_samples_index, ['gender', 'age', 'tissue_origin']], \n",
+    "    review_data_table_page_size=7,\n",
+    "    port=8052\n",
+    ")"
    ]
   },
   {
@@ -1796,6 +1852,43 @@
     "Select a sample from the dropdown and change the color of the histogram. \n",
     "\n",
     "Then, go back up to the annotaiton panel and press the `Mut val` button. This should autofill the `Histogram color` input to the same color you selected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a6a8463-1be3-4955-8f50-306317df2afb",
+   "metadata": {},
+   "source": [
+    "### Auto export or \"backup\" your annotations\n",
+    "\n",
+    "The data is automatically saved to a pickle object. However, you may want to maintain a back up copy of your data that is independet of the pickle file. Sometimes if you make environment changes, pickle may not be able to load the original data object and your annotations may be hard to retrieve.\n",
+    "\n",
+    "It's recommended to set `auto_export=True` and set a directory (local or bucket url) to save at minimum your annotation and history tables, which is set by default. If you have additional attributes from the data object you want to save (`reviewer.get_data_attributes()`), you can explicitly pass a list to `attributes_to_export`.\n",
+    "\n",
+    "If you do not set `auto_export_path`, it will automatically create a directory using the `data_pkl_fn` value. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "d05f523a-a3d6-4ae0-8279-c9d115a2ecf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting auto_export_path to ./data/example_reviewer_data.2.auto_export\n",
+      "Using ./data/example_reviewer_data.2.auto_export for auto exporting.\n",
+      "Dash app running on http://0.0.0.0:8052/\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_reviewer_2.run(\n",
+    "    port=8052,\n",
+    "    auto_export=True,\n",
+    ")"
    ]
   },
   {
