Add optimization section to tutorial, including caching usage and tips.

--- a/example_notebooks/Developer_Jupyter_Reviewer_Tutorial.ipynb
+++ b/example_notebooks/Developer_Jupyter_Reviewer_Tutorial.ipynb
@@ -486,6 +486,40 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Optimization\n",
+    "\n",
+    "Due to the specifications of how App Components are produced and updated, many compute-intensive tasks (primarily file loading) occur within Callback functions. This slows down performance extensively, especially when working with interactive tables or plots where the data is being accessed and modified/filtered repeatedly. While one approach would be to save intermediate files locally in an accessible format (e.g. pickle files), caching is a more robust and extendable solution.\n",
+    "\n",
+    "### Using functools.lrucache\n",
+    "Developers can decorate any function with `@functools.lrucache(maxsize=n)` to cache the results from `n` function calls in memory. Ideally, use this decorator for your most compute-intensive tasks, so when they are called again with the same arguments (when returning to a previous annotation or modifying a complicated figure), the results are already in memory.\n",
+    "\n",
+    "Dash also provides Callback Caching, which stores data in a shared memory database or to disk. This functionality is not yet implemented in JupyterReviewer as most apps are designed to be run in a single thread and without deployment. However, you can read more about Dash caching [here](https://dash.plotly.com/background-callback-caching).\n",
+    "\n",
+    "### cached_read_csv\n",
+    "A cached pandas read_csv function is also provided for convenience. Call `cached_read_csv()` to cache the results from your csv load, with a cachesize of 32. This is especially helpful when reading data from the cloud.\n",
+    "\n",
+    "### Arguments must by immutable\n",
+    "The functools lrucache method only works with immutable arguments that can be hashed. For common mutable objects (lists and dictionaries), we provide a helper decorator `@freezeargs` available for import from `JupyterReviewer.AppComponents.utils`. This decorator can be used to automatically transform any input lists or dicts to immutable tuples and frozendicts which can be hashed for use in the lrucache method.\n",
+    "\n",
+    "Passing any other mutable objects into a cached function is not supported (including custom objects).\n",
+    "\n",
+    "### Cache size\n",
+    "As of now, there is no way to dynamically set the cachesize for an app. As the developer, you should determine an appropriate number of function calls to keep in memory for each function you wrap with `lrucache`.\n",
+    "\n",
+    "### Development Tips\n",
+    "- Attempt to cache a function that works on the most generic/standard inputs for a given sample/patient. Call this cached function first and then make modifications to the resulting data.\n",
+    "- For cnv_suite visualization methods, many alterations (e.g. changing color, sigmas, even CN values) can be performed on an existing figure. In this case, you can cache the function that calls `plot_acr_interactive` and then modify the output based on any user changes."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "id": "afbf1be8-cf14-4846-8b8f-f2bae9995e23",
    "metadata": {},
    "source": [
