reference template repo

--- a/example_notebooks/Developer_Jupyter_Reviewer_Tutorial.ipynb
+++ b/example_notebooks/Developer_Jupyter_Reviewer_Tutorial.ipynb
@@ -333,7 +333,9 @@
    "source": [
     "**AppComponent**\n",
     "\n",
-    "To create an `AppComponent`, you will specify:\n",
+    "You can use existing app components (see the ReviewerRegistry at [example_notebooks/ReviewerRegistry.ipynb](https://github.com/getzlab/JupyterReviewer/blob/master/example_notebooks/ReviewerRegistry.ipynb) for different reviewers.), or create from scratch.\n",
+    "\n",
+    "To create an `AppComponent` from scratch, you will specify:\n",
     "- **`name`**: A string naming the particular component\n",
     "- **`layout`**: Using plotly dash's html and boostrap libraries, define how your component will look like (Divs, Graphs, Tables, etc.)\n",
     "- **`callback_output`**: A list of `Output()`'s. The first argument is the id of the subcomponent in your layout, and the second argument is what attribute of that component to update with your callback functions\n",
@@ -344,6 +346,11 @@
     "    - The output of this function is a **list** that corresponds IN ORDER of the `Output()`'s listed in `callback_output`. This function will be called whenever a user switches to a new subject to review.\n",
     "- **`internal_callback`**: A function with the the EXACT signature as `new_data_callback`. This function will be called whenever a user changes the attributes of subcomponents listed in `callback_input`.\n",
     "\n",
+    "We recommend organizing your custom AppComponents into python scripts located in an `AppComonent` directory (ie `MyReviewers/MyReviewers/AppComponent/MyCustomComponent.py`). Your `MyCustomComponent.py` will contain the functions to generate your layout, callbacks, and setting up your custom `AppComponent object\n",
+    "\n",
+    "**Premade components**\n",
+    "\n",
+    "`ReviewDataApp` objects also includes a function `add_table_from_path()` to create a simple table reading a file from a column. You can use it just like `add_component()`, but you only need to specify which column in the Data object to get the file from, and which columns in the file's table to display.\n",
     "\n",
     "**Custom args for callback functions**\n",
     "Sometimes your callback functions need parameters that may be specific to your reviewer type, or defined by the user (ex. pointing to a specific column name in the ReviewDataObject, specific parameters for displaying graphs, etc.). When adding a component to the app, you can also specify these arguments with keywords arguments.\n",
@@ -370,10 +377,7 @@
     "                          y=y)  # <-------------------\n",
     "        return app\n",
     "```\n",
-    "\n",
-    "**Premade components**\n",
-    "\n",
-    "`ReviewDataApp` objects also includes a function `add_table_from_path()` to create a simple table reading a file from a column. You can use it just like `add_component()`, but you only need to specify which column in the Data object to get the file from, and which columns in the file's table to display.\n"
+    "\n"
    ]
   },
   {
@@ -385,10 +389,12 @@
    "source": [
     "def gen_review_app(self, test_param) -> ReviewDataApp:\n",
     "        app = ReviewDataApp()\n",
-    "        app.add_table_from_path(table_name='DFCI MAF file', \n",
-    "                                component_name='maf-component-id', \n",
-    "                                table_fn_col='DFCI_bucket_sample_dfci_maf_fn', \n",
-    "                                table_cols=['Hugo_Symbol', 'Chromosome', 't_alt_count', 't_ref_count', 'Tumor_Sample_Barcode'])\n",
+    "        app.add_table_from_path(\n",
+    "            table_name='MAF file', \n",
+    "            component_name='maf-component-id', \n",
+    "            table_fn_col='sample_dfci_maf_fn', \n",
+    "            table_cols=['Hugo_Symbol', 'Chromosome', 't_alt_count', 't_ref_count', 'Tumor_Sample_Barcode']\n",
+    "        )\n",
     "        \n",
     "        return app\n",
     "    "
@@ -486,6 +492,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "69620cc1",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Optimization\n",
     "\n",
@@ -510,13 +522,7 @@
     "### Development Tips\n",
     "- Attempt to cache a function that works on the most generic/standard inputs for a given sample/patient. Call this cached function first and then make modifications to the resulting data.\n",
     "- For cnv_suite visualization methods, many alterations (e.g. changing color, sigmas, even CN values) can be performed on an existing figure. In this case, you can cache the function that calls `plot_acr_interactive` and then modify the output based on any user changes."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1176,9 +1182,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3390ac02-48c2-451c-b632-4c7368021aeb",
+   "metadata": {},
+   "source": [
+    "# Reviewer Suites and Organization\n",
+    "\n",
+    "If you plan to share your reviewer with others, or create a collection of different version of reviewers that share similar components or data types, we recommend creating a new github repo. We recommend following the [JupyterReviewerTemplate](https://github.com/getzlab/JupyterReviewerTemplate) repo as a guide for organizing your different reviewers, app components, and data types.\n",
+    "\n",
+    "```\n",
+    "MyCustomReviewer\n",
+    "    MyCustomReviewer\n",
+    "        Reviewers <-- Where you assemble a reviewer as shown in this example notebook\n",
+    "            MyCustomReviewerA.py\n",
+    "            MyCustomReviewerB.py\n",
+    "        AppComponents\n",
+    "            CustomAppComponentA.py\n",
+    "            CustomAppComponetB.py\n",
+    "            utils.py\n",
+    "        DataTypes\n",
+    "            CustomDataType.py\n",
+    "    .gitignore\n",
+    "    setup.py\n",
+    "    README.md\n",
+    "\n",
+    "```\n",
+    "\n",
+    "If you want to include your suite of reviewers in the [JupyterReviewer Registry](https://github.com/getzlab/JupyterReviewer/blob/master/example_notebooks/ReviewerRegistry.ipynb), follow the instructions in the notebook. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29779dba-8c41-47b3-b104-8914b8ce222e",
+   "id": "2dccb595-3417-4b1c-aa40-c0db74cacff2",
    "metadata": {},
    "outputs": [],
    "source": []
