--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -150,6 +150,8 @@
    "source": [
     "### 1. Select your reviewer\n",
     "\n",
+    "Check out the ReviewerRegistry at [example_notebooks/ReviewerRegistry.ipynb](https://github.com/getzlab/JupyterReviewer/blob/master/example_notebooks/ReviewerRegistry.ipynb) for different reviewers.\n",
+    "\n",
     "For this tutorial, we will use `MyCustomReviewer`. Go to `JupyterReviewer/Reviewers/` to view other available prebuilt options. \n",
     "\n",
     "**This tutorial only applies to any `Reviewer` that inherits from `JupyterReviewer.ReviewerTemplate`**\n",
