--- a/example_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
@@ -48,10 +48,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "a9657940",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "ef37cc47",
    "metadata": {},
    "outputs": [],
@@ -161,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "fdeffded",
    "metadata": {},
    "outputs": [],
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "8933f1a7",
    "metadata": {},
    "outputs": [],
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "829afcf7",
    "metadata": {},
    "outputs": [
@@ -332,7 +341,7 @@
        "sample_4   ./example_data/AnnoMate_Tutorial/mut_vafs/samp...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "ae59c4c8",
    "metadata": {},
    "outputs": [
@@ -439,7 +448,7 @@
        "4  gene_4  0.654362  sample_0  146           95           51"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,10 +460,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "b02b5fef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/Desktop/Methods/AnnoMate/AnnoMate/ReviewDataInterface.py:38: UserWarning:\n",
+      "\n",
+      "Loading existing data pkl file\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "if not os.path.exists('data'):\n",
     "    os.mkdir('data')\n",
@@ -483,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "32ab23ca-c27d-4c0d-9149-08c24b244d26",
    "metadata": {},
    "outputs": [
@@ -493,7 +513,7 @@
        "dict_keys(['index', 'description', 'annot_col_config_dict', 'annot_df', 'history_df', 'df'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "161965c4",
    "metadata": {},
    "outputs": [
@@ -630,7 +650,7 @@
        "sample_4   Testing preprocessing  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "cdc0779a",
    "metadata": {},
    "outputs": [],
@@ -674,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "2875d634",
    "metadata": {},
    "outputs": [],
@@ -685,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "6f611126-58d6-48b7-a056-01737bc2b263",
    "metadata": {},
    "outputs": [
@@ -717,8 +737,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sample_0</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>Nothing to say</td>\n",
+       "      <td>Remove</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_1</th>\n",
@@ -732,8 +752,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_3</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>Looks good</td>\n",
+       "      <td>Keep</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_4</th>\n",
@@ -745,15 +765,15 @@
        "</div>"
       ],
       "text/plain": [
-       "         Notes Flag\n",
-       "sample_0           \n",
-       "sample_1           \n",
-       "sample_2           \n",
-       "sample_3           \n",
-       "sample_4           "
+       "                   Notes    Flag\n",
+       "sample_0  Nothing to say  Remove\n",
+       "sample_1                        \n",
+       "sample_2                        \n",
+       "sample_3      Looks good    Keep\n",
+       "sample_4                        "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,14 +789,14 @@
    "source": [
     "### 6. Run the reviewer!\n",
     "\n",
-    "You can run the app inside the notebook (`mode='inline'`) or in a separate window (`mode='external'`, the default).\n",
+    "You can run the app inside the notebook (`mode='inline'`, the default) or in a separate window (`mode='external'` or `mode='tab'`).\n",
     "\n",
     "If you are running your notebook in a VM, you will need to create an ssh connection, and specify the host and port address"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "b00fd0cf",
    "metadata": {},
    "outputs": [
@@ -785,14 +805,25 @@
      "output_type": "stream",
      "text": [
       "Setting auto_export_path to ./data/example_reviewer_data.auto_export\n",
-      "Making directory ./data/example_reviewer_data.auto_export for auto exporting.\n",
       "Using ./data/example_reviewer_data.auto_export for auto exporting.\n",
-      "Dash app running on http://0.0.0.0:8051/\n"
+      "Dash app running on http://0.0.0.0:8055/\n"
      ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "window.open('http://0.0.0.0:8055/')"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "my_reviewer.run(collapsable=True, port=8051)"
+    "my_reviewer.run(collapsable=True, port=8055, mode='tab')"
    ]
   },
   {
@@ -818,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "id": "8bff62a2",
    "metadata": {},
    "outputs": [
@@ -856,17 +887,17 @@
        "    <tr>\n",
        "      <th>sample_1</th>\n",
        "      <td></td>\n",
-       "      <td>Keep</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_2</th>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Remove</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_3</th>\n",
-       "      <td>Test</td>\n",
-       "      <td>Remove</td>\n",
+       "      <td>Looks good</td>\n",
+       "      <td>Keep</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_4</th>\n",
@@ -880,13 +911,13 @@
       "text/plain": [
        "                   Notes    Flag\n",
        "sample_0  Nothing to say  Remove\n",
-       "sample_1                    Keep\n",
-       "sample_2  Nothing to say  Remove\n",
-       "sample_3            Test  Remove\n",
+       "sample_1                        \n",
+       "sample_2                        \n",
+       "sample_3      Looks good    Keep\n",
        "sample_4                        "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "id": "852bf6fa-9016-493a-89e9-cfa29e37d9c1",
    "metadata": {},
    "outputs": [
@@ -934,54 +965,34 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>sample_0</td>\n",
-       "      <td>2023-06-26 13:25:10.211195</td>\n",
+       "      <td>2023-06-26 16:07:47.278162</td>\n",
        "      <td>./data/example_reviewer_data.pkl</td>\n",
        "      <td>Nothing to say</td>\n",
        "      <td>Remove</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_1</td>\n",
-       "      <td>2023-06-26 13:25:15.299754</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td></td>\n",
-       "      <td>Keep</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>sample_3</td>\n",
-       "      <td>2023-06-26 13:25:21.459997</td>\n",
+       "      <td>2023-06-26 16:07:55.243697</td>\n",
        "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Test</td>\n",
-       "      <td>Remove</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_2</td>\n",
-       "      <td>2023-06-26 13:25:38.079655</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Remove</td>\n",
+       "      <td>Looks good</td>\n",
+       "      <td>Keep</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      index                   timestamp                    source_data_fn  \\\n",
-       "0  sample_0  2023-06-26 13:25:10.211195  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_1  2023-06-26 13:25:15.299754  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_3  2023-06-26 13:25:21.459997  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_2  2023-06-26 13:25:38.079655  ./data/example_reviewer_data.pkl   \n",
+       "      index                  timestamp                    source_data_fn  \\\n",
+       "0  sample_0 2023-06-26 16:07:47.278162  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_3 2023-06-26 16:07:55.243697  ./data/example_reviewer_data.pkl   \n",
        "\n",
        "            Notes    Flag  \n",
        "0  Nothing to say  Remove  \n",
-       "0                    Keep  \n",
-       "0            Test  Remove  \n",
-       "0  Nothing to say  Remove  "
+       "0      Looks good    Keep  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1888,9 +1899,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JupyterReviewerEnv",
+   "display_name": "clean_annomate_env",
    "language": "python",
-   "name": "jupyterreviewerenv"
+   "name": "clean_annomate_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1902,7 +1913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
