refactor to newest versions of dash

--- a/example_notebooks/Developer_AnnoMate_Tutorial.ipynb
+++ b/example_notebooks/Developer_AnnoMate_Tutorial.ipynb
@@ -381,11 +381,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4fd009e2-d3d9-4786-91ad-208919029f79",
+   "cell_type": "raw",
+   "id": "f193fa0b-00af-498e-8777-d03498bcca39",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def gen_review_app(self, test_param) -> ReviewDataApp:\n",
     "        app = ReviewDataApp()\n",
@@ -534,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9d7950db",
    "metadata": {},
    "outputs": [],
@@ -545,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5055350e",
    "metadata": {},
    "outputs": [],
@@ -559,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "26e67cc8-d01a-4f10-9225-4c2c76ef8fb6",
    "metadata": {},
    "outputs": [],
@@ -573,7 +571,6 @@
     "\n",
     "import plotly.express as px\n",
     "from plotly.subplots import make_subplots\n",
-    "from jupyter_dash import JupyterDash\n",
     "from dash import dcc\n",
     "from dash import html\n",
     "from dash.dependencies import Input, Output, State\n",
@@ -710,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "61659d39-c3e7-4c49-86bc-b69def417359",
    "metadata": {},
    "outputs": [
@@ -821,7 +818,7 @@
        "sample_4   ./example_data/AnnoMate_Tutorial/mut_vafs/samp...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3c701332-a202-4105-9696-758393da72eb",
    "metadata": {},
    "outputs": [],
@@ -849,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "98765e54-9136-44cb-bd74-a1682dade013",
    "metadata": {},
    "outputs": [
@@ -890,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "3e77bf55-415c-4ef8-965f-2119bf7d66c0",
    "metadata": {},
    "outputs": [
@@ -933,43 +930,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sample_0</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td>Option 1</td>\n",
        "      <td>20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_1</th>\n",
-       "      <td>0.4</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>Fishy</td>\n",
-       "      <td>Option 3</td>\n",
-       "      <td>15.0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>10</td>\n",
+       "      <td></td>\n",
+       "      <td>Option 0</td>\n",
+       "      <td>20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_2</th>\n",
-       "      <td>0.8</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td></td>\n",
-       "      <td>Option 0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_3</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>Looks good</td>\n",
-       "      <td>Option 0</td>\n",
-       "      <td>25.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>2</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Option 3</td>\n",
+       "      <td>20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_5</th>\n",
@@ -1096,31 +1093,31 @@
        "</div>"
       ],
       "text/plain": [
-       "           A_float  rating       Notes     class  another_annotation\n",
-       "value                                                               \n",
-       "sample_0       0.5     NaN              Option 1                20.0\n",
-       "sample_1       0.4     6.0       Fishy  Option 3                15.0\n",
-       "sample_2       0.8     1.0              Option 0                 2.0\n",
-       "sample_3       0.1     6.0  Looks good  Option 0                25.0\n",
-       "sample_4       NaN     NaN                                       NaN\n",
-       "sample_5       NaN     NaN                                       NaN\n",
-       "sample_6       NaN     NaN                                       NaN\n",
-       "sample_7       NaN     NaN                                       NaN\n",
-       "sample_8       NaN     NaN                                       NaN\n",
-       "sample_9       NaN     NaN                                       NaN\n",
-       "sample_10      NaN     NaN                                       NaN\n",
-       "sample_11      NaN     NaN                                       NaN\n",
-       "sample_12      NaN     NaN                                       NaN\n",
-       "sample_13      NaN     NaN                                       NaN\n",
-       "sample_14      NaN     NaN                                       NaN\n",
-       "sample_15      NaN     NaN                                       NaN\n",
-       "sample_16      NaN     NaN                                       NaN\n",
-       "sample_17      NaN     NaN                                       NaN\n",
-       "sample_18      NaN     NaN                                       NaN\n",
-       "sample_19      NaN     NaN                                       NaN"
+       "           A_float rating Notes     class  another_annotation\n",
+       "value                                                        \n",
+       "sample_0       0.4               Option 1                20.0\n",
+       "sample_1       0.8     10        Option 0                20.0\n",
+       "sample_2       NaN    NaN                                 NaN\n",
+       "sample_3       NaN    NaN                                 NaN\n",
+       "sample_4       0.1      2        Option 3                20.0\n",
+       "sample_5       NaN    NaN                                 NaN\n",
+       "sample_6       NaN    NaN                                 NaN\n",
+       "sample_7       NaN    NaN                                 NaN\n",
+       "sample_8       NaN    NaN                                 NaN\n",
+       "sample_9       NaN    NaN                                 NaN\n",
+       "sample_10      NaN    NaN                                 NaN\n",
+       "sample_11      NaN    NaN                                 NaN\n",
+       "sample_12      NaN    NaN                                 NaN\n",
+       "sample_13      NaN    NaN                                 NaN\n",
+       "sample_14      NaN    NaN                                 NaN\n",
+       "sample_15      NaN    NaN                                 NaN\n",
+       "sample_16      NaN    NaN                                 NaN\n",
+       "sample_17      NaN    NaN                                 NaN\n",
+       "sample_18      NaN    NaN                                 NaN\n",
+       "sample_19      NaN    NaN                                 NaN"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d8431143-09e0-4482-977a-9fd869cf9791",
    "metadata": {},
    "outputs": [
@@ -1139,19 +1136,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading data from previous review with pickle file\n",
       "Setting auto_export_path to ./data/Prebuilt_reviewer.Dev_Reviewer_2.auto_export\n",
+      "Making directory ./data/Prebuilt_reviewer.Dev_Reviewer_2.auto_export for auto exporting.\n",
       "Using ./data/Prebuilt_reviewer.Dev_Reviewer_2.auto_export for auto exporting.\n",
       "Dash app running on http://0.0.0.0:8053/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cchu/Desktop/Methods/AnnoMate/AnnoMate/ReviewDataInterface.py:38: UserWarning:\n",
-      "\n",
-      "Loading existing data pkl file\n",
-      "\n"
      ]
     }
    ],
@@ -1217,9 +1206,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JupyterReviewerEnv",
+   "display_name": "clean_annomate_env",
    "language": "python",
-   "name": "jupyterreviewerenv"
+   "name": "clean_annomate_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1231,7 +1220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
