fix missing input issue when autofill is not specified

--- a/example_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
@@ -48,19 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 1,
    "id": "a9657940",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 2,
    "id": "ef37cc47",
    "metadata": {},
    "outputs": [],
@@ -170,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 26,
    "id": "fdeffded",
    "metadata": {},
    "outputs": [],
@@ -190,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 27,
    "id": "8933f1a7",
    "metadata": {},
    "outputs": [],
@@ -230,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 28,
    "id": "829afcf7",
    "metadata": {},
    "outputs": [
@@ -341,7 +332,7 @@
        "sample_4   ./example_data/AnnoMate_Tutorial/mut_vafs/samp...  "
       ]
      },
-     "execution_count": 334,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 29,
    "id": "ae59c4c8",
    "metadata": {},
    "outputs": [
@@ -448,7 +439,7 @@
        "4  gene_4  0.654362  sample_0  146           95           51"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 30,
    "id": "b02b5fef",
    "metadata": {},
    "outputs": [
@@ -503,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 31,
    "id": "32ab23ca-c27d-4c0d-9149-08c24b244d26",
    "metadata": {},
    "outputs": [
@@ -513,7 +504,7 @@
        "dict_keys(['index', 'description', 'annot_col_config_dict', 'annot_df', 'history_df', 'df'])"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 32,
    "id": "161965c4",
    "metadata": {},
    "outputs": [
@@ -650,7 +641,7 @@
        "sample_4   Testing preprocessing  "
       ]
      },
-     "execution_count": 338,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 33,
    "id": "cdc0779a",
    "metadata": {},
    "outputs": [],
@@ -694,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 37,
    "id": "2875d634",
    "metadata": {},
    "outputs": [],
@@ -705,10 +696,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "6f611126-58d6-48b7-a056-01737bc2b263",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Notes</th>\n",
+       "      <th>Flag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>sample_0</th>\n",
+       "      <td>Nothing to say</td>\n",
+       "      <td>Remove</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sample_1</th>\n",
+       "      <td>Never mind looks good</td>\n",
+       "      <td>Keep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sample_2</th>\n",
+       "      <td>Nothing to say</td>\n",
+       "      <td>Remove</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sample_3</th>\n",
+       "      <td>Looks good</td>\n",
+       "      <td>Keep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sample_4</th>\n",
+       "      <td>Fishy</td>\n",
+       "      <td>Remove</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Notes    Flag\n",
+       "sample_0         Nothing to say  Remove\n",
+       "sample_1  Never mind looks good    Keep\n",
+       "sample_2         Nothing to say  Remove\n",
+       "sample_3             Looks good    Keep\n",
+       "sample_4                  Fishy  Remove"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_reviewer.get_annot().head()"
    ]
@@ -727,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 39,
    "id": "b00fd0cf",
    "metadata": {},
    "outputs": [
