test grabbing description

--- a/catalog/ReviewerCatalog.ipynb
+++ b/catalog/ReviewerCatalog.ipynb
@@ -22,6 +22,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4e0d345c-131d-42fe-8f69-54fbc58349e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d17b79b5-36fb-4190-b472-064a1d6a3d24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://raw.githubusercontent.com/getzlab/PurityReviewer/master/PurityReviewer/Reviewers/ManualPurityReviewer.py\"\n",
+    "r = requests.get(url)\n",
+    "# res = r.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d8851bc7-c4ec-4b7f-b798-b6055e98c865",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'from AnnoMate.Data import Data, DataAnnotation\\nfrom AnnoMate.ReviewDataApp import ReviewDataApp, AppComponent\\nfrom AnnoMate.DataTypes.GenericData import GenericData\\nfrom AnnoMate.AppComponents.DataTableComponents import gen_annotated_data_info_table_component\\nfrom AnnoMate.ReviewerTemplate import ReviewerTemplate\\nfrom AnnoMate.AnnotationDisplayComponent import NumberAnnotationDisplay, TextAreaAnnotationDisplay\\n\\nimport pandas as pd\\nimport numpy as np\\n\\nimport plotly.express as px\\nimport plotly.graph_objects as go\\nfrom plotly.subplots import make_subplots\\nfrom dash import dcc\\nfrom dash import html\\nfrom dash.dependencies import Input, Output, State\\nimport dash_bootstrap_components as dbc\\n\\nfrom cnv_suite.visualize import plot_acr_interactive\\n\\nfrom rpy2.robjects import r, pandas2ri\\nimport os\\nimport pickle\\n\\nfrom typing import List, Dict\\n\\nfrom dash.dependencies import State\\n\\nclass ManualPurityReviewer(ReviewerTemplate):\\n    def gen_data(self,\\n                 description: str,\\n                 df: pd.DataFrame,\\n                 index: List,\\n                 annot_df: pd.DataFrame = None,\\n                 annot_col_config_dict: Dict = None,\\n                 history_df: pd.DataFrame = None) -> GenericData:\\n        \"\"\"Generate data for PurityReviewer object\\n\\n        Returns\\n        -------\\n        GenericData\\n            Data object that contains only one dataframe\\n        \"\"\"\\n        pandas2ri.activate()\\n\\n        return GenericData(index=index,\\n                           description=description,\\n                           df=df,\\n                           annot_df=annot_df,\\n                           annot_col_config_dict=annot_col_config_dict,\\n                           history_df=history_df)\\n\\n    def gen_review_app(self,\\n                       sample_info_cols,\\n                       acs_col,\\n                       csize=None,\\n                       step_size=None\\n                       ) -> ReviewDataApp:\\n        \"\"\"\\n        Parameters\\n        ==========\\n        sample_info_cols: list[str]\\n            List of columns in data\\n        acs_col: str\\n            Column name in data with path to seg file from alleliccapseg\\n        csize: dict\\n            Dictionary with chromosome sizes\\n        step_size: float\\n            Minimum increment allowed for purity (default is 0.01)\\n        \"\"\"\\n        app = ReviewDataApp()\\n        \\n        app.add_component(\\n            gen_annotated_data_info_table_component(), \\n            cols=sample_info_cols, \\n            data_attribute=\\'df\\',\\n            link_display_name=None\\n        )\\n\\n        app.add_component(\\n            gen_absolute_custom_solution_component(step_size=step_size),\\n            acs_col=acs_col,\\n            step_size=step_size,\\n            csize=csize\\n        )\\n        \\n        return app\\n\\n    def set_default_autofill(self):\\n        self.add_autofill(\\'cnp-plot-button\\', State(\\'custom-cnp-graph-purity\\', \\'value\\'), \\'Purity\\')\\n        self.add_autofill(\\'cnp-plot-button\\', State(\\'custom-cnp-graph-ploidy\\', \\'value\\'), \\'Ploidy\\')\\n\\n    def set_default_review_data_annotations(self):\\n        self.add_review_data_annotation(\\n            annot_name=\\'Purity\\',\\n            review_data_annotation=DataAnnotation(\\'float\\', validate_input=validate_purity))\\n        self.add_review_data_annotation(\\n            annot_name=\\'Ploidy\\',\\n            review_data_annotation=DataAnnotation(\\'float\\', validate_input=validate_ploidy))\\n        self.add_review_data_annotation(\\n            annot_name=\\'Notes\\', \\n            review_data_annotation=DataAnnotation(\\n                annot_value_type=\\'string\\')\\n        )\\n\\n    def set_default_review_data_annotations_app_display(self):\\n        self.add_annotation_display_component(\\'Purity\\', NumberAnnotationDisplay())\\n        self.add_annotation_display_component(\\'Ploidy\\', NumberAnnotationDisplay())\\n        self.add_annotation_display_component(\\'Notes\\', TextAreaAnnotationDisplay())\\n        '"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.text"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "67c55c3e-ca0d-460d-a0ed-677779f069e2",
    "metadata": {},
